typescript/checker/tests/conformance/es6/yieldExpressions/YieldExpression1_es6.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            41,
        ),
        hi: BytePos(
            46,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldExpression1_es6.ts:2:1
  |
2 | yield;
  | ^^^^^

